# ray_tracer

./: CMakeLists.txt
camera/: CMakeLists.txt
camera/test/: camera_ray_construction_test.cpp
common/include/common/: constants.h  types.h
core/: CMakeLists.txt
core/include/: canvas.h  color.h  tuple.h  types.h
core/include/core/: color.h  transform.h  transformations.h  tuple.h  types.h  utils.h  view_transform.h
core/test/: CMakeLists.txt  canvas_test.cpp  color_operator_test.cpp  tuple_function_test.cpp  tuple_operator_test.cpp  tuple_test.cpp
core/test/transformations/: transform_chaining_test.cpp  transform_rotation_test.cpp  transform_scaling_test.cpp  tuple_rotation_test.cpp  tuple_translation_test.cpp  view_transform_test.cpp
core/test/tuple/: tuple_matrix_multiplication_test.cpp  vector_reflection_test.cpp
exercises/: CMakeLists.txt
exercises/1_projectile/: CMakeLists.txt
exercises/2_clock/: CMakeLists.txt
exercises/4_sphere/: CMakeLists.txt  main.cpp
exercises/5_first_scene/: main.cpp
exercises/6_soft_shadow_scene/: CMakeLists.txt  main.cpp
exercises/7_plane_scene/: CMakeLists.txt  main.cpp
exercises/clock/: CMakeLists.txt  main.cpp
exercises/first_scene/: CMakeLists.txt
exercises/projectile/: CMakeLists.txt  main.cpp  projectile.h
exercises/shadow/: CMakeLists.txt  main.cpp
exercises/sphere/: main.cpp
light/: CMakeLists.txt
light/include/light/: light.h  point_light.h
light/test/: material_lighting_test.cpp  position_test.cpp  ray_creation_test.cpp  ray_transformation_test.cpp
math/: CMakeLists.txt
math/include/: matrix.h
math/include/math/: matrix.h
math/test/: matrix_creation_test.cpp  matrix_determinant_test.cpp  matrix_inversion_test.cpp  matrix_multiplication_test.cpp  matrix_submatrix_test.cpp  matrix_transpose_test.cpp
math/test/include/: matrix_test_helper.h
rays/: CMakeLists.txt
rays/include/rays/: ray.h
rays/test/: position_test.cpp  ray_creation_test.cpp  ray_transformation_test.cpp
shapes/: CMakeLists.txt
shapes/include/shapes/: intersection.h  material.h  shape.h  sphere.h
shapes/src/: intersection.cpp  material.cpp  sphere.cpp
shapes/test/: hit_test.cpp  material_lighting_test.cpp  prepare_hit_test.cpp  sphere_normal_test.cpp  sphere_transformation_test.cpp
src/: CMakeLists.txt
src/camera/include/camera/: camera.h
src/camera/src/: camera.cpp
src/camera/test/: camera_pixel_size_test.cpp  camera_render_test.cpp
src/common/: CMakeLists.txt
src/core/include/core/: canvas.h  color.h  transform.h  transformations.h
src/core/test/: CMakeLists.txt
src/core/test/transformations/: transform_rotation_test.cpp  transform_scaling_test.cpp  tuple_scaling_test.cpp  tuple_shearing_test.cpp
src/core/test/tuple/: tuple_matrix_multiplication_test.cpp  tuple_operator_test.cpp  vector_reflection_test.cpp
src/light/: CMakeLists.txt
src/light/include/light/: i_light.h  point_light.h  ray.h  square_light.h
src/light/src/: light.cpp  point_light.cpp  square_light.cpp
src/light/test/: material_lighting_test.cpp  point_light_intensity_test.cpp  position_test.cpp  soft_shadow_test.cpp
src/math/: CMakeLists.txt
src/math/include/math/: matrix.h
src/math/test/: matrix_determinant_test.cpp  matrix_multiplication_test.cpp  matrix_transpose_test.cpp
src/patterns/: CMakeLists.txt
src/patterns/include/patterns/: i_pattern.h  stripe.h
src/patterns/src/: stripe.cpp
src/patterns/test/: stripe_pattern_test.cpp
src/shapes/: CMakeLists.txt
src/shapes/include/shapes/: i_shape.h  intersection.h  plane.h  shape.h  sphere.h
src/shapes/src/: intersection.cpp  plane.cpp  sphere.cpp
src/shapes/test/: hit_test.cpp  intersection_test.cpp  plane_intersection_test.cpp  plane_normal_test.cpp  prepare_hit_test.cpp  sphere_normal_test.cpp
src/utils/include/utils/: matrix_test_helper.h
src/world/include/world/: world.h
src/world/src/: world.cpp
src/world/test/: shading_test.cpp  world_coloring_test.cpp
src/writer/include/writer/: ppm_writer.h
src/writer/test/: ppm_writer_test.cpp
utils/: CMakeLists.txt
utils/include/utils/: constants.h  tuple_test_helper.h  types.h
world/: CMakeLists.txt
world/include/world/: world.h
world/src/: world.cpp
world/test/: shading_test.cpp  world_coloring_test.cpp  world_intersection_test.cpp  world_shadow_test.cpp
writer/: CMakeLists.txt
writer/include/: i_writer.h  ppm_writer.h
writer/include/writer/: i_writer.h
writer/src/: ppm_writer.cpp
